@@ -109,7 +109,7 @@ r'''
     .. _examples: http://dev.pocoo.org/projects/werkzeug/browser/examples
 
 
-    :copyright: 2007 by Armin Ronacher.
+    :copyright: 2007-2008 by Armin Ronacher.
     :license: BSD, see LICENSE for more details.
 '''
 import sys
